<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/lbl_Register_Personal_Mandatory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/activity_registration_mandatory"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_light"
        android:textStyle="italic"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/txt_Register_Fullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:hint="@string/activity_personaldetails_label_fullname"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/txt_Register_Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:hint="@string/activity_personaldetails_label_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/txt_Register_Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:hint="@string/activity_personaldetails_label_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_PersonalDetails_Proceed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/activity_personaldetails_btn_proceed" android:background="#61900d"/>

   <!-- <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="hint" />
    </com.google.android.material.textfield.TextInputLayout>
    -->

</LinearLayout>