<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="@color/cardview_light_background"
        card_view:cardCornerRadius="10dp"
        card_view:cardElevation="5dp"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/lbl_DishDetails_OrderBy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/layout_dishdetails_label_orderby"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lbl_DishDetails_Dishname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#61900d"
                android:textStyle="bold" android:textSize="18sp" />

            <TextView
                android:id="@+id/lbl_DishDetails_Description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/lbl_DishDetails_QtyLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="150dp"
                android:background=" #FF5733"
                android:text="@string/layout_dishdetails_label_quantityleft"
                android:textColor="@android:color/white" android:textSize="10sp" android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/lbl_DishDetails_Seller"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/layout_dishdetails_label_seller" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="70dp"
                    android:text="@string/layout_dishdetails_label_quantity" />

                <EditText
                    android:id="@+id/txt_DishDetails_Quantity"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/lbl_DishDetails_Price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/layout_dishdetails_label_priceperitem"
                    android:textStyle="bold" />


                <Button
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="100dp"
                    android:text="@string/layout_dishdetails_label_addtocart"
                    android:textSize="12sp" />
            </LinearLayout>


            <TextView
                android:id="@+id/lbl_DishDetails_ReadyDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/layout_dishdetails_label_readyby" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>