<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/activity_dishdetails_label_filterby" />

        <EditText
            android:id="@+id/txt_OrderFood_DateSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/activity_dishdetails_label_deliverydate" />

        <EditText
            android:id="@+id/txt_OrderFood_LocationSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/activity_dishdetails_label_location"
            android:inputType="text" android:layout_marginStart="5dp" android:width="100dp"/>

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/ic_search" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvOrderDishes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical" />


</LinearLayout>